# 2025-workshop-smolagents_mcp

./: README.md  intro_agents.md  intro_mcp.md  pyproject.toml  workshop_schedule.md
.devcontainer/: devcontainer.json
data/: events.db
src/workshop_smolagents_mcp/: 1_text_to_sql.ipynb  2_web_search.ipynb  __init__.py  app.py  event.py  multi_agent.ipynb  server.py  text_to_sql.ipynb  text_to_sql.py  tools.py  web_search.ipynb  web_search.py
