[project]
name = "workshop-smolagents-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.3",
    "ipykernel>=6.30.1",
    "python-dotenv>=1.1.1",
    "smolagents>=1.21.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
