[project]
name = "workshop-smolagents-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "ddgs>=9.5.4",
    "fastmcp>=2.11.3",
    "ipykernel>=6.30.1",
    "openai>=1.101.0",
    "python-dotenv>=1.1.1",
    "smolagents>=1.21.2",
    "sqlalchemy>=2.0.43",
]

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
packages = ["src/workshop_smolagents_mcp"]

[dependency-groups]
dev = [
    "jupytext>=1.17.2",
]
